--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.10.2",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "validator": "^5.1.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
