--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.10.2",
+    "mongodb": "^2.1.7",
     "socket.io": "^1.4.5",
     "validator": "^5.1.0"
   },
