--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.10.2",
-    "mongodb": "^2.1.7",
     "socket.io": "^1.4.5",
     "validator": "^5.1.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-sass": "^0.9.2",
